sending images from Home Owner

--- a/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.html
+++ b/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.html
@@ -1,1 +1,6 @@
-<p>other-image-message works!</p>
+<div class="parent-container d-flex my-4">
+    <div class="image-container px-3 py-2">
+        <div class="label-14-100 color-dark mt-1">{{message?.imageUrl}}</div>
+        <div class="label-10-100 color-dark">{{message?.createdAt | date: 'short'}}</div>
+    </div>
+</div>
