--- a/src/app/home-owner/presentation/component/my-image-message/my-image-message.component.html
+++ b/src/app/home-owner/presentation/component/my-image-message/my-image-message.component.html
@@ -1,1 +1,6 @@
-<p>my-image-message works!</p>
+<div class="parent-container d-flex justify-content-end my-4">
+    <div class="image-container text-end">
+        <img class="member-photo" [src]="message?.imageUrl + readSASToken">
+        <!-- <div class="label-10-100 color-white mt-2">{{message?.createdAt | date: 'short'}}</div> -->
+    </div>
+</div>
