--- a/src/app/home-owner/presentation/ui/chat/chat.component.html
+++ b/src/app/home-owner/presentation/ui/chat/chat.component.html
@@ -16,17 +16,37 @@
                 *ngIf="message.type === 'TEXT' && message.sentById !== (homeOwner$ | async)?.entityId">
             </app-other-text-message>
 
+            <app-my-image-message [message]="message"
+                *ngIf="message.type === 'IMAGE' && message.sentById === (homeOwner$ | async)?.entityId">
+            </app-my-image-message>
+
+            <app-other-image-message [message]="message"
+                *ngIf="message.type === 'IMAGE' && message.sentById !== (homeOwner$ | async)?.entityId">
+            </app-other-image-message>
+
         </ng-container>
     </div>
 </div>
 
 <form class="pb-3 w-100" style="position: fixed; bottom: 0px; border-radius: 30px 30px 0 0px; background-color: white;">
-    <mat-form-field appearance="outline" class="w-100 add-message" hideRequiredMarker>
+    <mat-form-field style="font-size: 14px !important" appearance="outline" class="w-100 add-message"
+        hideRequiredMarker>
         <textarea matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" name="ecgFindings" cdkAutosizeMinRows="1"
             cdkAutosizeMaxRows="3" maxlength="240" placeholder="Type your message here..." [(ngModel)]="text"
             class="w-100 no-scroll"></textarea>
-        <button matSuffix mat-button style="margin-top: 5px; min-width: 0px; padding: 5px 5px" (click)="sendMessage()">
-            <mat-icon>send</mat-icon>
+
+        <button matSuffix mat-button class="me-2" style="margin-top: 5px; min-width: 0px; padding: 5px 5px"
+            (click)="selectImage()">
+            <mat-icon>attach_file</mat-icon>
         </button>
+
+        <button matSuffix mat-button style="margin-top: 5px; min-width: 0px; padding: 9px;
+        background: #DDCA5B;
+        border-radius: 20px;
+        box-shadow: 0 0 10px #dcc963;" (click)="sendMessage()">
+            <mat-icon style="transform: rotate(-45deg);">send</mat-icon>
+        </button>
+
+
     </mat-form-field>
 </form>
