added assets, updated fonts, polishing of images, chat

--- a/src/app/edit-family/edit-family.component.html
+++ b/src/app/edit-family/edit-family.component.html
@@ -6,7 +6,7 @@
     </div>
     <hr class="hr">
    <div class="d-flex  justify-content-center">
-      <img class="family-member-photo " src="http://bluegalaxy.info/images/sea_captain.jpg">
+      <img class="family-member-photo " src="assets/images/ic_defaultuser.svg">
    </div> 
     <form>
         <div class="p-3 justify-content-center w-100 ">
