--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
       </div>
    </div>
    <div class="bottom-container">
-      <div class="img-center"><img class="circular-img" src="http://bluegalaxy.info/images/sea_captain.jpg"></div>
+      <div class="img-center"><img class="circular-img" src="assets/images/ic_default_myprofile.svg"></div>
       <div class="user-info">
          <div class="header-label ">Ali Mubarak</div>
          <div class=" faded-mail">ali@mailinator.com</div>
