--- a/src/app/home-owner/presentation/ui/add-family/add-family.component.html
+++ b/src/app/home-owner/presentation/ui/add-family/add-family.component.html
@@ -7,8 +7,9 @@
    <div class="p-3">
       <form [formGroup]="addHouseholeFormGroup" (submit)="addHousehold()">
          <div class="d-flex justify-content-center" (click)="selectImage()">
-            <img class="photo-container" [src]="'data:image/'+image?.format+ ';base64,' + image?.base64String"
-               style="object-fit: cover;">
+            <img class="photo-container" style="object-fit: none;"
+               [src]="image?.base64String ? 'data:image/'+image?.format+ ';base64,' + image?.base64String : 'assets/images/ic_defaultcamera.svg'"
+               [ngStyle]="image?.base64String ? {'object-fit': 'cover'} : {'object-fit': 'none'}">
          </div>
 
          <ng-container *ngIf="showAdultSelection">
