--- a/src/app/home-owner/presentation/ui/resident/resident.component.html
+++ b/src/app/home-owner/presentation/ui/resident/resident.component.html
@@ -1,11 +1,6 @@
-<div class="main-container">
-    <div class="d-flex justify-content-between p-3">
-        <mat-icon routerLink="/home-owner">arrow_back</mat-icon>
-        <span class="header2-label">Household</span>
-        <span></span>
-    </div>
-    <hr class="hr">
-    <div class="bottom-container p-3">
+<app-header title="Household"></app-header>
+<div class=" header-padding bkg-color" style="min-height: 100%;">
+    <div class="p-3">
         <div class="d-flex justify-content-between align-items-center">
             <span class="sub-heading-label">My Family</span>
             <span> <button mat-button class="mat-button-small " (click)="openAddHousehold('FAMILY_ADULT')">ADD
@@ -16,8 +11,8 @@
                 <div class="p-1 d-flex flex-column align-items-center" style="width: 80px;"
                     *ngIf="member.type === 'FAMILY_ADULT' ||  member.type === 'FAMILY_KID'">
                     <img class="member-photo"
-                        [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'"
-                        style="object-fit: cover;">
+                        [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'"
+                        [ngStyle]="member.imageUrl ? {'object-fit': 'cover'} : {'background-color': 'white', 'object-fit': 'none'}">
                     <div class="small-label mt-1">{{member.truncatedName}}</div>
                     <div class="smallest-opacity-label">{{member.role}}</div>
                 </div>
@@ -32,7 +27,8 @@
         <ng-container *ngFor="let helper of (homeOwner$ | async)?.households" class="daily-helper d-flex p-2">
             <div class="daily-helper d-flex p-2" *ngIf="helper.type === 'DAILY_HELP'">
                 <img class="member-photo me-3"
-                    [src]="helper.imageUrl ? (helper.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'">
+                    [ngStyle]="helper.imageUrl ? {'object-fit': 'cover'} : {'object-fit': 'none'}"
+                    [src]="helper.imageUrl ? (helper.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'">
                 <span class="flex-grow-1 justify-content-center d-flex flex-column">
                     <div class="sub-heading-label">{{helper.name}}</div>
                     <div class="sub-label">{{helper.role}}</div>
@@ -52,7 +48,8 @@
                 <ng-container *ngFor="let member of (homeOwner$ | async)?.households">
                     <div class="p-1 d-flex flex-column align-items-center" *ngIf="member.type === 'FREQUENT_VISITOR'">
                         <img class="member-photo"
-                            [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'http://bluegalaxy.info/images/sea_captain.jpg'">
+                            [ngStyle]="member.imageUrl ? {'object-fit': 'cover'} : {'object-fit': 'none'}"
+                            [src]="member.imageUrl ? (member.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'">
                         <div class="small-label mt-1">{{member.truncatedName}}</div>
                         <div class="smallest-opacity-label">{{member.role}}</div>
                     </div>
