--- a/src/app/security-guard/presentation/ui/kid-exit/kid-exit.component.html
+++ b/src/app/security-guard/presentation/ui/kid-exit/kid-exit.component.html
@@ -15,7 +15,9 @@
                 (click)="selectedKid = kid">
                 <div class="d-flex justify-content-center">
                     <img [ngClass]="{'active': selectedKid === kid}" class="mb-1 photo-container"
-                        src="http://bluegalaxy.info/images/sea_captain.jpg">
+                        style="object-fit: cover;"
+                        [src]="kid.imageUrl ? (kid.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'">
+
                 </div>
                 <label class="small-label">{{kid.truncatedName}}</label>
             </div>
