--- a/src/app/society/presentation/ui/notices/noticeboard.component.html
+++ b/src/app/society/presentation/ui/notices/noticeboard.component.html
@@ -1,57 +1,26 @@
-<div class="notice-container pb-3">
-    <div class="d-flex justify-content-between p-3 ">
-        <mat-icon routerLink="/home-owner">arrow_back</mat-icon>
-        <span class="header-label">Noticeboard</span>
-        <span class="header-label"></span>
-    </div>
-    <hr class="hr">
-    <!-- <div class="px-3 py-2">
-        <button mat-stroked-button class="filter-btn active ms-1 "><b>All</b></button>
-        <button mat-stroked-button class="filter-btn  ms-1"> Society</button>
-        <button mat-stroked-button class="filter-btn  ms-1">Payment</button>
-    </div> -->
+<app-header title="Noticeboard" rightIcon="start_chat" (onRightClick)="openChat()"></app-header>
 
-    <ng-container *ngFor="let notice of (society$ | async)?.notices">
-        <div class="flex-container p-3 m-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <div *ngIf="notice.tag">
-                    <span><small><button mat-stroked-button class="filter-btn">{{notice.tag}}</button></small></span>
+<div class=" header-padding bkg-color" style="min-height: 100%;">
+    <div class="main-container p-3">
+        <mat-chip-list>
+            <mat-chip *ngFor="let filter of filters" class="selection-chip"
+                [ngClass]="{'active': activeFilter === filter}" (click)="activeFilter = filter">
+                {{filter.name}}
+            </mat-chip>
+        </mat-chip-list>
+
+        <ng-container *ngFor="let notice of (society$ | async)?.notices">
+            <div class="flex-container p-3 my-3" *ngIf="activeFilter.name === 'All' || activeFilter.name === 'Society'">
+                <div class="d-flex justify-content-between align-items-center">
+                    <span class="filter-btn">Society</span>
+                    <!-- <div *ngIf="notice.tag">
+                        <span><small><button mat-stroked-button class="filter-btn">'Society</button></small></span>
+                    </div> -->
+                    <span class="opacity-label">{{notice.createdAt | date:'short'}}</span>
                 </div>
-                <span class="opacity-label">{{notice.createdAt | date:'short'}}</span>
+                <hr>
+                <p class="mt-2" [innerHTML]="notice.text"></p>
             </div>
-            <hr>
-            <p class="mt-2" [innerHTML]="notice.text"></p>
-        </div>
-    </ng-container>
-
-    <!-- <div class="flex-container">
-        <div class="d-flex justify-content-between px-3 align-items-center">
-            <span><small><button mat-stroked-button class="filter-btn warn ms-1">Payment</button></small></span>
-            <span class="opacity-label">30-feb-2023</span>
-        </div>
-        <hr>
-        <div class="d-flex flex-column p-3">
-            <div class="header-label">News Paper Service Payment
-            </div>
-            <p class="mt-2 paragraph-label">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-                cupiditate quis
-                modi quos quaerat? Nam recusandae minima a illum cum. Odio dolores et amet libero voluptates tempore
-                veniam ipsa!</p>
-        </div>
-    </div><br>
-    <div class="flex-container">
-        <div class="d-flex justify-content-between px-3 align-items-center">
-            <span><small><button mat-stroked-button class="filter-btn warn ms-1">Payment</button></small></span>
-            <span class="opacity-label">30-feb-2023</span>
-        </div>
-        <hr>
-        <div class="d-flex flex-column p-3">
-            <div class="header-label">News Paper Service Payment
-            </div>
-            <p class="mt-2 paragraph-label">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa
-                cupiditate quis
-                modi quos quaerat? Nam recusandae minima a illum cum. Odio dolores et amet libero voluptates tempore
-                veniam ipsa!</p>
-        </div><br>
-    </div> -->
+        </ng-container>
+    </div>
 </div>
