--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Source Sans Pro', "Helvetica Neue", sans-serif !important;
 }
 
 
@@ -63,4 +63,17 @@ body {
   padding: 0 !important;
   border-radius: 20px 20px 0 0;
   max-height: 80vh !important;
+}
+
+.header-padding {
+  padding-top: 57px;
+}
+
+
+.bkg-color {
+  background: #F8F8F8 !important;
+}
+
+.bkg-white {
+  background: white !important;
 }
