--- a/src/app/home-owner/presentation/component/my-image-message/my-image-message.component.scss
+++ b/src/app/home-owner/presentation/component/my-image-message/my-image-message.component.scss
@@ -2,6 +2,7 @@
 
 img {
     object-fit: cover;
-    max-width: 50%;
+    width: 200px;
+    height: 200px;
     border-radius: 20px 20px 0 20px;
 }
