--- a/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.scss
+++ b/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.scss
@@ -1,5 +1,6 @@
 .image-container {
     background-color: #CCD1DA;
     border-radius: 20px;
-    max-width: 50%;
+    width: 200px;
+    height: 200px;
 }
