--- a/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.scss
+++ b/src/app/home-owner/presentation/component/other-image-message/other-image-message.component.scss
@@ -1,5 +1,4 @@
-.image-container {
-    background-color: #CCD1DA;
+.member-photo {
     border-radius: 20px;
     width: 200px;
     height: 200px;
