--- a/src/app/home-owner/presentation/ui/home/home.component.html
+++ b/src/app/home-owner/presentation/ui/home/home.component.html
@@ -18,7 +18,7 @@
             <img src="assets/images/card_ic_reservation.svg">
             <div class="label-10-100 color-primary">Reservation</div>
         </span>
-        <span class="span-background columncount opacity-25">
+        <span class="span-background columncount" routerLink="/home-owner/payments">
             <img src="assets/images/card_ic_payments.svg">
             <div class="label-10-100 color-primary">Payments</div>
         </span>
