--- a/src/app/home-owner/presentation/component/other-text-message/other-text-message.component.html
+++ b/src/app/home-owner/presentation/component/other-text-message/other-text-message.component.html
@@ -1,5 +1,5 @@
 <div class="parent-container d-flex my-4">
-    <div class="text-container text-end px-3 py-2">
+    <div class="text-container px-3 py-2">
         <div class="label-14-100 color-dark mt-1">{{message?.text}}</div>
         <div class="label-10-100 color-dark">{{message?.createdAt | date: 'short'}}</div>
     </div>
