--- a/src/theme/label/_label-theme.scss
+++ b/src/theme/label/_label-theme.scss
@@ -39,6 +39,10 @@
         color: #001949 !important
     }
 
+    .color-mustard {
+        color: #C39500 !important
+    }
+
     // $primary-palette: map.get($color-config, 'primary');
 
     // .smallest-yello-label
@@ -54,6 +58,7 @@
         font-weight: 700 !important;
         font-size: 24px !important;
     }
+
     .label-10-100 {
         font-weight: 100 !important;
         font-size: 10px !important;
@@ -71,7 +76,12 @@
     }
 
     .label-14-400 {
-        font-weight: 100 !important;
+        font-weight: 400 !important;
+        font-size: 14px !important;
+    }
+
+    .label-14-700 {
+        font-weight: 700 !important;
         font-size: 14px !important;
     }
 
@@ -140,6 +150,16 @@
     }
 
     .sub-mini-label {
+        font-size: 15px !important;
+        font-weight: 400 !important;
+    }
+
+    .label-15-700 {
+        font-size: 15px !important;
+        font-weight: 700 !important;
+    }
+
+    .label-15-400 {
         font-size: 15px !important;
         font-weight: 400 !important;
     }
