--- a/src/app/home-owner/presentation/component/row-pending-payment/row-pending-payment.component.html
+++ b/src/app/home-owner/presentation/component/row-pending-payment/row-pending-payment.component.html
@@ -1,4 +1,4 @@
-<div class="bkg-white" style="border-radius: 10px;">
+<div class="bkg-white mb-3" style="border-radius: 10px;">
     <div class="header2-label p-3">{{payment?.type}}</div>
     <div class="d-flex p-3" style="border-top: 1px solid #e2e2e2;">
         <div class="w-50">
