realtime integration for ably

--- a/src/app/home-owner/presentation/component/row-pending-payment/row-pending-payment.component.html
+++ b/src/app/home-owner/presentation/component/row-pending-payment/row-pending-payment.component.html
@@ -7,8 +7,8 @@
             <div class="label-14-400 color-primary">Amount</div>
         </div>
         <div class="flex-grow-1 text-end">
-            <div class="label-14-400 color-primary">{{(payment?.createdAt | date: 'short') ?? '-'}}</div>
-            <div class="label-14-700 color-mustard"> {{payment?.status}}</div>
+            <div class="label-14-400 color-primary">{{(payment?.dueDate | date: 'short') ?? '-'}}</div>
+            <div class="label-14-700 color-mustard"> {{status}}</div>
             <div class="label-14-400 color-primary">{{payment?.currency}} {{payment?.amount}}</div>
         </div>
     </div>
