reservation and ably disconnect

--- a/src/app/home-owner/presentation/ui/home/home.component.html
+++ b/src/app/home-owner/presentation/ui/home/home.component.html
@@ -15,7 +15,7 @@
             <img src="assets/images/card_ic_notice.svg">
             <div class="label-10-100 color-primary">Noticeboard</div>
         </span>
-        <span class="span-background columncount opacity-25">
+        <span class="span-background columncount" routerLink="/home-owner/reservations">
             <img src="assets/images/card_ic_reservation.svg">
             <div class="label-10-100 color-primary">Reservation</div>
         </span>
