reservation and related search

--- a/src/app/home-owner/presentation/component/row-upcoming-reservation/row-upcoming-reservation.component.html
+++ b/src/app/home-owner/presentation/component/row-upcoming-reservation/row-upcoming-reservation.component.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="d-flex" style="border-top: 1px solid #e2e2e2;">
-        <button mat-button class="label-15-400 color-primary"
+        <button mat-button class="label-15-400 color-primary" (click)="cancel()"
             style="width: 30%; border-right: 1px solid #e2e2e2;">Cancel</button>
-        <button mat-button class="flex-grow-1 label-15-700 color-primary">Edit</button>
+        <button mat-button class="flex-grow-1 label-15-700 color-primary" (click)="edit()">Edit</button>
     </div>
 </div>
