--- a/src/app/security-guard/presentation/ui/kid-exit/kid-exit.component.html
+++ b/src/app/security-guard/presentation/ui/kid-exit/kid-exit.component.html
@@ -16,7 +16,8 @@
                 <div class="d-flex justify-content-center">
                     <img [ngClass]="{'active': selectedKid === kid}" class="mb-1 photo-container"
                         style="object-fit: cover;"
-                        [src]="kid.imageUrl ? (kid.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'">
+                        [src]="kid.imageUrl ? (kid.imageUrl + readSASToken) : 'assets/images/ic_defaultuser.svg'"
+                        [ngStyle]="kid.imageUrl ? {'object-fit': 'cover'} : {'background-color': 'white', 'object-fit': 'none'}">
 
                 </div>
                 <label class="small-label">{{kid.truncatedName}}</label>
