--- a/src/app/security-guard/presentation/ui/search-unit/search-unit.component.html
+++ b/src/app/security-guard/presentation/ui/search-unit/search-unit.component.html
@@ -8,7 +8,7 @@
         <form [formGroup]="searchFormGroup">
             <mat-form-field appearance="outline" class="pe-1 w-100" hideRequiredMarker>
                 <input matInput class="ms-2 subtitle-label" formControlName="unit" name="unit"
-                    placeholder="Unit Number" />
+                    placeholder="Unit Number or Name" />
             </mat-form-field>
         </form>
 
