--- a/src/app/home-owner/presentation/ui/add-reservation/add-reservation.component.html
+++ b/src/app/home-owner/presentation/ui/add-reservation/add-reservation.component.html
@@ -1,9 +1,8 @@
-<app-header title="Add Reservation"></app-header>
+<app-header [title]="reservation ? 'Reschedule' :  'Add Reservation'" [hasCalendly]="true"></app-header>
 <div class="main-container h-100 header-padding bkg-color" style="overflow: scroll;">
+
     <!-- Calendly inline widget begin -->
-    <div class="calendly-inline-widget"
-        data-url="https://calendly.com/arjav-dave?name=Arjav&email=arjav@royalecheese.com&phone%20Number=8758400543"
-        style="min-width:100%;height:100%;">
+    <div class="calendly-inline-widget" style="min-width:100%;height:100%;">
     </div>
     <!-- Calendly inline widget end -->
 </div>
