--- a/src/theme/label/_label-theme.scss
+++ b/src/theme/label/_label-theme.scss
@@ -1,185 +1,188 @@
-@use 'sass:map';
-@use '@angular/material' as mat;
+@use "sass:map";
+@use "@angular/material" as mat;
 
 @mixin color($theme) {
-    $color-config: mat.get-color-config($theme);
+  $color-config: mat.get-color-config($theme);
 
-    $primary-palette: map.get($color-config, 'primary');
+  $primary-palette: map.get($color-config, "primary");
 
-    .small-label,
-    .smallest-opacity-label,
-    .opacity-label,
-    .title-label,
-    .description-label,
-    .header-label,
-    .paragraph-label,
-    .sub-label,
-    .sub-heading-label,
-    .header2-label,
-    .label-24-100,
-    .smallest-yello-label,
-    .opacity-mini-label,
-    .color-primary {
-        color: mat.get-color-from-palette($primary-palette, 500) !important;
-    }
+  .small-label,
+  .smallest-opacity-label,
+  .opacity-label,
+  .title-label,
+  .description-label,
+  .header-label,
+  .paragraph-label,
+  .sub-label,
+  .sub-heading-label,
+  .header2-label,
+  .label-24-100,
+  .smallest-yello-label,
+  .opacity-mini-label,
+  .color-primary {
+    color: mat.get-color-from-palette($primary-palette, 500) !important;
+  }
 
-    .color-success {
-        color: mat.get-color-from-palette($primary-palette, 1000) !important;
-    }
+  .color-success {
+    color: mat.get-color-from-palette($primary-palette, 1000) !important;
+  }
 
-    .color-warn {
-        color: mat.get-color-from-palette($primary-palette, 900) !important;
-    }
+  .color-warn {
+    color: mat.get-color-from-palette($primary-palette, 900) !important;
+  }
 
-    .color-white {
-        color: white !important
-    }
+  .color-white {
+    color: white !important;
+  }
 
-    .color-dark {
-        color: #001949 !important
-    }
+  .color-dark {
+    color: #001949 !important;
+  }
 
-    .color-mustard {
-        color: #C39500 !important
-    }
+  .color-mustard {
+    color: #c39500 !important;
+  }
 
-    // $primary-palette: map.get($color-config, 'primary');
+  // $primary-palette: map.get($color-config, 'primary');
 
-    // .smallest-yello-label
-    // {        color: mat.get-color-from-palette($primary-palette, 700) !important;
+  // .smallest-yello-label
+  // {        color: mat.get-color-from-palette($primary-palette, 700) !important;
 
-    // };
+  // };
 }
 
 @mixin typography($theme) {
-    $typography-config: mat.get-typography-config($theme);
+  $typography-config: mat.get-typography-config($theme);
 
-    .title-label {
-        font-weight: 700 !important;
-        font-size: 24px !important;
-    }
+  .title-label {
+    font-weight: 700 !important;
+    font-size: 24px !important;
+  }
 
-    .label-10-100 {
-        font-weight: 100 !important;
-        font-size: 10px !important;
-    }
+  .label-10-100 {
+    font-weight: 100 !important;
+    font-size: 10px !important;
+  }
 
+  .label-10-700 {
+    font-weight: 700 !important;
+    font-size: 10px !important;
+  }
 
-    .label-10-700 {
-        font-weight: 700 !important;
-        font-size: 10px !important;
-    }
+  .label-15-400 {
+    font-weight: 400 !important;
+    font-size: 15px !important;
+  }
 
-    .label-15-400 {
-        font-weight: 400 !important;
-        font-size: 15px !important;
-    }
+  .label-14-400 {
+    font-weight: 400 !important;
+    font-size: 14px !important;
+  }
 
-    .label-14-400 {
-        font-weight: 400 !important;
-        font-size: 14px !important;
-    }
+  .label-14-700 {
+    font-weight: 700 !important;
+    font-size: 14px !important;
+  }
 
-    .label-14-700 {
-        font-weight: 700 !important;
-        font-size: 14px !important;
-    }
+  .label-24-100 {
+    font-weight: 100 !important;
+    font-size: 24px !important;
+  }
 
-    .label-24-100 {
-        font-weight: 100 !important;
-        font-size: 24px !important;
-    }
+  .label-24-700 {
+    font-weight: 700 !important;
+    font-size: 24px !important;
+  }
 
-    .label-24-700 {
-        font-weight: 700 !important;
-        font-size: 24px !important;
-    }
+  .description-label {
+    font-size: 18px !important;
+  }
 
-    .description-label {
-        font-size: 18px !important;
-    }
+  .header-label {
+    font-weight: 700 !important;
+    font-size: 18px !important;
+  }
 
-    .header-label {
-        font-weight: 700 !important;
-        font-size: 18px !important;
-    }
+  .header2-label {
+    font-weight: 700 !important;
+    font-size: 17px !important;
+  }
 
-    .header2-label {
-        font-weight: 700 !important;
-        font-size: 17px !important;
-    }
+  .paragraph-label {
+    font-weight: 500 !important;
+    font-size: 17px !important;
+  }
 
-    .paragraph-label {
-        font-weight: 500 !important;
-        font-size: 17px !important;
-    }
+  .opacity-label {
+    opacity: 0.63 !important;
+  }
 
-    .opacity-label {
-        opacity: 0.63 !important;
-    }
+  .opacity-mini-label {
+    opacity: 0.5 !important;
+    font-weight: 400 !important;
+    font-size: 12px !important;
+  }
 
-    .opacity-mini-label {
-        opacity: 0.50 !important;
-        font-weight: 400 !important;
-        font-size: 12px !important;
-    }
+  .small-label {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+  }
 
-    .small-label {
-        font-size: 14px !important;
-        font-weight: 600 !important;
-    }
+  .label-12-400 {
+    font-size: 12px !important;
+    font-weight: 400 !important;
+  }
+  .label-20-300 {
+    font-size: 20px !important;
+    font-weight: 300 !important;
+  }
 
-    .label-20-300 {
-        font-size: 20px !important;
-        font-weight: 300 !important;
-    }
+  .sub-label {
+    font-size: 15px !important;
+  }
 
-    .sub-label {
-        font-size: 15px !important;
-    }
+  .smallest-opacity-label {
+    font-size: 12px !important;
+    font-weight: 300 !important;
+    opacity: 0.5 !important;
+  }
 
-    .smallest-opacity-label {
-        font-size: 12px !important;
-        font-weight: 300 !important;
-        opacity: 0.50 !important;
-    }
+  .sub-heading-label {
+    font-size: 17px !important;
+    font-weight: 600 !important;
+  }
 
-    .sub-heading-label {
-        font-size: 17px !important;
-        font-weight: 600 !important;
-    }
+  .sub-mini-label {
+    font-size: 15px !important;
+    font-weight: 400 !important;
+  }
 
-    .sub-mini-label {
-        font-size: 15px !important;
-        font-weight: 400 !important;
-    }
+  .label-15-700 {
+    font-size: 15px !important;
+    font-weight: 700 !important;
+  }
 
-    .label-15-700 {
-        font-size: 15px !important;
-        font-weight: 700 !important;
-    }
+  .label-15-400 {
+    font-size: 15px !important;
+    font-weight: 400 !important;
+  }
 
-    .label-15-400 {
-        font-size: 15px !important;
-        font-weight: 400 !important;
-    }
-
-    .smallest-yello-label {
-        font-size: 10px !important;
-        font-weight: 700 !important;
-    }
+  .smallest-yello-label {
+    font-size: 10px !important;
+    font-weight: 700 !important;
+  }
 }
 
 @mixin theme($theme) {
-    $color-config: mat.get-color-config($theme);
+  $color-config: mat.get-color-config($theme);
 
-    @if $color-config !=null {
-        @include color($theme);
-    }
+  @if $color-config !=null {
+    @include color($theme);
+  }
 
-    $typography-config: mat.get-typography-config($theme);
+  $typography-config: mat.get-typography-config($theme);
 
-    @if $typography-config !=null {
-        @include typography($theme);
-    }
+  @if $typography-config !=null {
+    @include typography($theme);
+  }
 }
