--- a/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
+++ b/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
@@ -34,7 +34,11 @@
     *ngIf="showPopup"
     class="d-flex justify-content-between mb-4 dues-popup p-2"
   >
-    <img src="assets/images/ic_defaultuser.svg" class="img-72 ms-1" alt="" />
+    <img
+      src="assets/images/image_outstandingdues.svg"
+      class="img-72 ms-1"
+      alt=""
+    />
     <div>
       <div class="d-flex justify-content-between mb-1">
         <div>
