--- a/src/app/home-owner/presentation/component/row-upcoming-reservation/row-upcoming-reservation.component.html
+++ b/src/app/home-owner/presentation/component/row-upcoming-reservation/row-upcoming-reservation.component.html
@@ -5,15 +5,15 @@
     </div>
     <div class="d-flex p-3" style="border-top: 1px solid #e2e2e2;">
         <div style="width: 35%;">
-            <div class="header2-label color-dark">{{reservation?.type}}</div>
+            <div class="header2-label color-dark">{{reservation?.amenity}}</div>
             <div class="label-14-400 color-primary">Date</div>
             <div class="label-14-400 color-primary">Slot</div>
         </div>
         <div class="flex-grow-1">
             <div class="label-14-400 color-primary">&nbsp;</div>
-            <div class="label-14-400 color-primary"> {{reservation?.eventStartDate | date: 'mediumDate'}}</div>
-            <div class="label-14-400 color-primary">{{reservation?.eventStartDate | date: 'shortTime'}} -
-                {{reservation?.eventEndDate | date: 'shortTime'}}
+            <div class="label-14-400 color-primary"> {{reservation?.startDateTime | date: 'mediumDate'}}</div>
+            <div class="label-14-400 color-primary">{{reservation?.startDateTime | date: 'shortTime'}} -
+                {{reservation?.endDateTime | date: 'shortTime'}}
             </div>
         </div>
     </div>
