--- a/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
+++ b/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
@@ -1,39 +1,25 @@
-<app-header [title]="'New Reservation: ' + amenity"></app-header>
+<app-header [title]="(reservation ? 'Reschedule: ' : 'New Reservation: ') + amenity"></app-header>
 <div class="main-container h-100 header-padding bkg-color px-3">
   <div class="border-bottom">
-    <mat-calendar
-      [selected]="selectedDate"
-      (selectedChange)="selectDate($event)"
-    ></mat-calendar>
+    <mat-calendar [minDate]="todaysDate" [selected]="selectedDate" (selectedChange)="selectDate($event)"></mat-calendar>
   </div>
   <div class="mt-3 mb-4">
     <div class="d-flex mb-2 pb-1 justify-content-between">
       <div class="label-15-700 color-primary">Choose Slot</div>
-      <div *ngIf="selectedSlot == undefined" class="paragraph-label">
-        Total Availability: 40/120
-      </div>
-      <div *ngIf="selectedSlot != undefined" class="paragraph-label">
-        Selected Availability: 8/12
+      <div class="paragraph-label">
+        Availability: {{availableSlotCount}}/{{timeSlots.length}}
       </div>
     </div>
     <div class="d-flex flex-wrap" style="row-gap: 15px; column-gap: 17px">
-      <div
-        *ngFor="let timeSlot of timeSlots; let i = index"
-        class="time-slot available-slot"
-        [ngClass]="[
+      <div *ngFor="let timeSlot of timeSlots; let i = index" class="time-slot available-slot" [ngClass]="[
           timeSlot.available ? 'available-slot' : 'unavailable-slot',
-          selectedSlot == i ? 'active' : ''
-        ]"
-        (click)="selectSlot(i, timeSlot)"
-      >
-        {{ timeSlot.title }}
+          selectedSlot == timeSlot ? 'active' : ''
+        ]" (click)="selectSlot(timeSlot)">
+        {{ timeSlot.startDateTime | date: 'HH:mm' }} - {{ timeSlot.endDateTime | date: 'HH:mm' }}
       </div>
     </div>
   </div>
-  <div
-    *ngIf="showPopup"
-    class="d-flex justify-content-between mb-4 dues-popup p-2"
-  >
+  <div *ngIf="showPopup" class="d-flex justify-content-between mb-4 dues-popup p-2">
     <img src="assets/images/ic_defaultuser.svg" class="img-72 ms-1" alt="" />
     <div>
       <div class="d-flex justify-content-between mb-1">
@@ -51,14 +37,8 @@
       </div>
     </div>
   </div>
-  <button
-    mat-flat-button
-    color="primary"
-    class="mat-flat-button w-100 mb-4"
-    style="color: #fff"
-    [disabled]="selectedSlot == undefined"
-    (click)="confirm()"
-  >
+  <button mat-flat-button color="primary" class="mat-flat-button w-100 mb-4" style="color: #fff"
+    [disabled]="selectedSlot == undefined" (click)="confirm()">
     Confirm Reservation
   </button>
 </div>
