Cancel, Edit Reservation; Image Distorted fix; Get society fix; Cancel dialog for reservation;

--- a/src/app/home-owner/presentation/ui/add-family/add-family.component.html
+++ b/src/app/home-owner/presentation/ui/add-family/add-family.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
 
    <div class="d-flex justify-content-center py-3">
-      <span class="header2-label">Add Family</span>
+      <span class="header2-label">{{title}}</span>
    </div>
    <hr class="hr pb-1">
    <div class="p-3">
