--- a/src/app/home-owner/presentation/ui/booking-summary/booking-summary.component.html
+++ b/src/app/home-owner/presentation/ui/booking-summary/booking-summary.component.html
@@ -1,8 +1,8 @@
-<app-header [title]="'Booking Summary'"></app-header>
+<app-header [title]="'Booking Summary'" [hideBack]="true"></app-header>
 <div class="main-container h-100 header-padding bkg-color px-3">
   <div class="d-flex flex-column justify-content-between h-100">
     <div class="mt-3">
-      <app-row-upcoming-reservation [reservation]="reservation" (onEdit)="edit($event)">
+      <app-row-upcoming-reservation [reservation]="reservation" (onEdit)="edit($event)" (onCancel)="cancel($event)">
       </app-row-upcoming-reservation>
       <div class="bkg-white d-flex flex-column align-items-center justify-content-center pt-4 pb-5"
         style="border-radius: 10px">
