--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -29,7 +29,8 @@
 }
 
 
-.middle-container{padding: 12px;
+.middle-container{
+  padding: 8px;
   background-color: white; 
   border-radius: 10px;
 } 
@@ -63,8 +64,8 @@
 }
 
 .edit-icon{
-  height: 25px;
-  width: 25px;
+  height: 35px;
+  width: 35px;
   font-size: 18px;
   border-radius: 25px;
 }
