--- a/src/app/home-owner/presentation/ui/add-family/add-family.component.html
+++ b/src/app/home-owner/presentation/ui/add-family/add-family.component.html
@@ -30,10 +30,16 @@
                </mat-form-field>
             </div>
          </ng-container>
+
          <div class="sub-mini-label mt-4">Name</div>
          <mat-form-field class="w-100" appearance="outline" hideRequiredMarker>
             <input matInput placeholder="Name" formControlName="name">
             <mat-icon class="mat-icon " matSuffix>perm_contact_calendar</mat-icon>
+         </mat-form-field>
+
+         <div class="sub-mini-label mt-4">Email</div>
+         <mat-form-field class="w-100" appearance="outline" hideRequiredMarker>
+            <input matInput placeholder="Email" formControlName="email">
          </mat-form-field>
 
          <ng-container *ngIf="showPermissions">
@@ -56,7 +62,10 @@
          </div>
 
          <button [disabled]="!addHouseholeFormGroup.valid" mat-flat-button color="primary"
-            class="mat-flat-button w-100">Add</button>
+            class="mat-flat-button w-100 my-3">Add</button>
+
+         <!-- <button  mat-flat-button color="warn" type="reset"
+            class="mat-flat-button w-100">Remove</button> -->
       </form>
    </div>
 </div>
